Add Node engine specification

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": ["teachable", "streak", "gamification"],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
